Bug 33163 - VisualEditor: Floating toolbar should not be displayed when the edit area is entirely off-screen
- Added limits to toolbar float, Toolbar will not go past the last node in editor.
- Added bottom mode to allow toolbar to stick above the last node until the scroll position
is above the last node.
- Actually checking toolbar config now and setting float when flag is set.
- Gave float method for top toolbar a better name.

--- a/modules/ve/ui/styles/ve.ui.Surface.css
+++ b/modules/ve/ui/styles/ve.ui.Surface.css
@@ -31,6 +31,15 @@
 	z-index: 100;
 	border-top: none;
 }
+.es-toolbar-wrapper.bottom .es-toolbar {
+	position: absolute;
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+	-o-border-radius: 0;
+	border-radius: 0;
+	z-index: 100;
+	border-top: none;
+}
 .es-toolbar-shadow {
 	background-image: url(images/toolbar-shadow.png);
 	background-position: top left;
